--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,11 +2,11 @@
   --indent: 8vw;
   --text-gap: 2rem;
   --text-gap-small: 1rem;
-  --column-gap: 5vw;
-  --text-size-huge: 48px;
-  --text-size-xxlarge: 32px;
-  --text-size-xlarge: 24px;
-  --text-size-large: 18px;
+  --column-gap: 4vw;
+  --text-size-huge: 46px;
+  --text-size-xxlarge: 30px;
+  --text-size-xlarge: 22px;
+  --text-size-large: 17px;
   --text-size-medium: 15px;
   --text-size-small: 14px;
   --text-size-xsmall: 12px;
@@ -19,6 +19,8 @@
   --color-primary: 24 58 78;
   --text-color: var(--color-primary);
   --heading-color: var(--color-primary);
+  --header-background-color: 0 0 0 / 0.2;
+  --header-color: 255 255 255;
 }
 
 * {
@@ -72,7 +74,7 @@ h2 {
 
 h3 {
   font-size: var(--text-size-large);
-  font-family: var(--default-font-family);
+  font-family: var(--feature-font-family);
 }
 
 hr {
@@ -85,7 +87,8 @@ hr {
   text-align: center;
 }
 
-section > :is(h1, h2, h3, h4, h5, h6, p, ul, form) + :is(h1, h2, h3, h4, h5, h6, p, ul, form) {
+section > :is(h1, h2, h3, h4, h5, h6, p, ul, form, address) + :is(h1, h2, h3, h4, h5, h6, p, ul, form,
+  address) {
   margin-top: var(--text-gap);
 }
 
@@ -117,7 +120,6 @@ article {
   grid-auto-rows: min-content;
   grid-auto-flow: row;
 
-  // Layout styles
   & > header {
     position: absolute;
     top: 0;
@@ -166,22 +168,22 @@ article {
     @media (min-width: 480px) {
       grid-template-columns: repeat(2, 1fr);
 
-      & > section:nth-child(2) {
+      & > section:nth-of-type(1) {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(3) {
+      & > section:nth-of-type(2) {
         grid-column: 1 / 2;
         grid-row: 2 / 3;
       }
 
-      & > section:nth-child(4) {
+      & > section:nth-of-type(3) {
         grid-column: 2 / 3;
         grid-row: 2 / 3;
       }
 
-      & > section:nth-child(5) {
+      & > section:nth-of-type(4) {
         grid-column: 1 / 3;
         grid-row: 3 / 4;
       }
@@ -193,22 +195,22 @@ article {
     @media (min-width: 480px) {
       grid-template-columns: repeat(2, 1fr);
 
-      & > section:nth-child(2) {
+      & > section:nth-of-type(1) {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(3) {
+      & > section:nth-of-type(2) {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(4) {
+      & > section:nth-of-type(3) {
         grid-column: 1 / 3;
         grid-row: 2 / 3;
       }
 
-      & > section:nth-child(5) {
+      & > section:nth-of-type(4) {
         grid-column: 1 / 3;
         grid-row: 3 / 4;
       }
@@ -219,22 +221,22 @@ article {
     @media (min-width: 480px) {
       grid-template-columns: repeat(3, 1fr);
 
-      & > section:nth-child(2) {
+      & > section:nth-of-type(1) {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(3) {
+      & > section:nth-of-type(2) {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(4) {
+      & > section:nth-of-type(3) {
         grid-column: 3 / 4;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(5) {
+      & > section:nth-of-type(4) {
         grid-column: 1 / 4;
         grid-row: 2 / 3;
       }
@@ -245,22 +247,22 @@ article {
     @media (min-width: 480px) {
       grid-template-columns: repeat(4, 1fr);
 
-      & > section:nth-child(2) {
+      & > section:nth-of-type(1) {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(3) {
+      & > section:nth-of-type(2) {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(4) {
+      & > section:nth-of-type(3) {
         grid-column: 3 / 4;
         grid-row: 1 / 2;
       }
 
-      & > section:nth-child(5) {
+      & > section:nth-of-type(4) {
         grid-column: 4 / 5;
         grid-row: 1 / 2;
       }
@@ -290,22 +292,31 @@ article {
 }
 
 .dot {
-  padding: 8rem;
+  padding: 0;
   background-color: rgba(white, 0.7);
   border-radius: 100%;
   aspect-ratio: 1;
+  max-height: 50vh;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 6%;
+  backdrop-filter: blur(4px);
+
+
+
+  & > img {
+    width: 60%;
+  }
+
+  & > h3 {
+    font-size: clamp(16px, 1.5vw, 22px);
+  }
 }
 
 article[data-section-name="hero"] {
-  section {
-    backdrop-filter: blur(4px);
-  }
-
   .panelBackground {
     filter: sepia(1);
   }
