--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -7,6 +7,7 @@ const { title } = Astro.props;
 
 import { SEO } from "astro-seo";
 import "../styles/styles.scss";
+import "../styles/layouts.scss";
 ---
 
 <!DOCTYPE html>
