Tweaked fonts and colors

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -44,7 +44,7 @@ textarea,
 label,
 select {
   margin: 0;
-  line-height: 1.5;
+  line-height: 2;
   font-family: var(--default-font-family);
   font-size: var(--text-size-medium);
   color: rgb(var(--text-color));
@@ -57,7 +57,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  line-height: 1.5;
+  line-height: 2;
   font-family: var(--default-font-family);
   color: rgb(var(--heading-color));
 }
@@ -113,6 +113,12 @@ section > :is(h1, h2, h3, h4, h5, h6, p, ul, form, address) + :is(h1, h2, h3, h4
   }
 }
 
+.opening-soon {
+  display: block;
+  max-width: 180px;
+  margin: 0 auto 20px auto;
+}
+
 .dot {
   padding: 0;
   background-color: rgba(white, 0.7);
@@ -140,7 +146,7 @@ section > :is(h1, h2, h3, h4, h5, h6, p, ul, form, address) + :is(h1, h2, h3, h4
 
 article[data-section-name="hero"] {
   .panelBackground {
-    filter: sepia(1);
+    filter: grayscale(1);
   }
 }
 
