--- a/styles/layouts.scss
+++ b/styles/layouts.scss
@@ -4,6 +4,10 @@ article {
   grid-auto-rows: min-content;
   grid-auto-flow: row;
 
+  * {
+    color: inherit;
+  }
+
   & > header {
     position: absolute;
     top: 0;
@@ -150,5 +154,20 @@ article {
         grid-row: 1 / 2;
       }
     }
+  }
+}
+
+section {
+  &.right {
+    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &.centered {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
