--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,9 +17,10 @@
   --bold-font-family: "Ronnia W01 Regular";
 
   --color-primary: 24 58 78;
+  --color-accent: 120 45 49;
   --text-color: var(--color-primary);
   --heading-color: var(--color-primary);
-  --header-background-color: 0 0 0 / 0.2;
+  --header-background-color: 0 0 0 / 0.6;
   --header-color: 255 255 255;
 }
 
@@ -124,7 +125,8 @@ section > :is(h1, h2, h3, h4, h5, h6, p, ul, form, address) + :is(h1, h2, h3, h4
   background-color: rgba(white, 0.7);
   border-radius: 100%;
   aspect-ratio: 1;
-  max-height: 50vh;
+  height: 50vh;
+  max-height: 50vw;
 
   display: flex;
   flex-direction: column;
@@ -173,4 +175,9 @@ article[data-section-name="hero"] {
   @at-root .panelBackground & {
     margin-bottom: 0;
   }
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: rgb(var(--color-accent));
 }
