--- a/components/Social.astro
+++ b/components/Social.astro
@@ -56,6 +56,7 @@ import { SITE } from "../config";
       height: 1px;
       margin: -1px;
       overflow: hidden;
+      white-space: nowrap;
     }
   }
 
