Test react components

--- a/layouts/PageLayout.astro
+++ b/layouts/PageLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "../shared/astro/page.astro";
+import Page from "../shared/astro/page.jsx";
 
 const { frontmatter } = Astro.props;
 ---
