--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -7,7 +7,7 @@ export interface Props {
 // import { SITE } from "../config";
 // import { SEO } from "astro-seo";
 
-// import "../styles/styles.scss";
+import "../styles/styles.scss";
 // import "../styles/layouts.scss";
 ---
 
