--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,9 +1,218 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+:root {
+  --indent: 8vw;
+  --text-gap: 2rem;
+  --text-gap-small: 1rem;
+  --column-gap: 4vw;
+  --text-size-huge: 46px;
+  --text-size-xxlarge: 30px;
+  --text-size-xlarge: 22px;
+  --text-size-large: 17px;
+  --text-size-medium: 15px;
+  --text-size-small: 14px;
+  --text-size-xsmall: 12px;
+  --text-size-xxsmall: 10px;
+
+  --feature-font-family: "Rosewood W05 Fill";
+  --default-font-family: "Ronnia W01 Light";
+  --bold-font-family: "Ronnia W01 Regular";
+
+  --color-primary: 24 58 78;
+  --color-accent: 120 45 49;
+  --text-color: var(--color-primary);
+  --heading-color: var(--color-primary);
+  --header-background-color: 0 0 0 / 0.6;
+  --header-color: 255 255 255;
 }
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  height: 100%;
+  max-height: 100%;
+  font-size: 62.5%;
+  overflow-x: hidden;
+  font-family: var(--default-font-family);
+}
+
+p,
+li,
+input,
+button,
+textarea,
+label,
+select {
+  margin: 0;
+  line-height: 2;
+  font-family: var(--default-font-family);
+  font-size: var(--text-size-medium);
+  color: rgb(var(--text-color));
+}
+
+table {
+  line-height: 1.6;
+  font-family: var(--default-font-family);
+  font-size: var(--text-size-medium);
+  margin-bottom: 2em;
+
+  & th {
+    text-align: right;
+    padding-right: 0.5em;
+  }
+
+  & td {
+    text-align: left;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  line-height: 2;
+  font-family: var(--default-font-family);
+  color: rgb(var(--heading-color));
+}
+
+h1 {
+  font-size: var(--text-size-xxlarge);
+  font-family: var(--feature-font-family);
+}
+
+h2 {
+  font-size: var(--text-size-xlarge);
+  font-family: var(--feature-font-family);
+}
+
+h3 {
+  font-size: var(--text-size-large);
+  font-family: var(--feature-font-family);
+
+  &.highlight1 {
+    color: rgb(var(--color-accent) / 0.7);
+  }
+
+  &.highlight2 {
+    color: white;
+    background-color: rgb(var(--color-accent) / 0.9);
+    padding: 3px 10px;
+    margin: 0 0 5px 0;
+  }
+}
+
+hr {
+  height: 1px;
+  background-color: rgb(var(--color-primary) / 0.25);
+  border: none;
+}
+
+strong {
+  font-family: var(--bold-font-family);
+}
+
+.center {
+  text-align: center;
+}
+
+section
+  > :is(h1, h2, h3, h4, h5, h6, p, ul, form, address)
+  + :is(h1, h2, h3, h4, h5, h6, p, ul, form, address) {
+  margin-top: var(--text-gap);
+}
+
+// .panelBackground {
+//   position: absolute;
+//   inset: 0;
+//   z-index: -1;
+
+//   & > * {
+//     position: absolute;
+//     inset: 0;
+//   }
+
+//   img {
+//     object-fit: cover;
+//     object-position: center;
+//   }
+
+//   .swiper figure {
+//     height: 100%;
+//     width: 100%;
+//   }
+// }
+
+// .opening-soon {
+//   display: block;
+//   max-width: 180px;
+//   margin: 0 auto 20px auto;
+// }
+
+// .dot {
+//   padding: 0;
+//   background-color: rgba(white, 0.7);
+//   border-radius: 100%;
+//   aspect-ratio: 1;
+//   height: 50vh;
+//   max-height: 50vw;
+
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   justify-content: center;
+//   gap: 6%;
+//   backdrop-filter: blur(4px);
+
+//   & > img {
+//     width: 60%;
+//   }
+
+//   & > h3 {
+//     font-size: clamp(16px, 1.5vw, 22px);
+//   }
+// }
+
+// article[data-section-name="hero"] {
+//   .panelBackground {
+//     filter: grayscale(1);
+//   }
+// }
+
+// .swiper:not(.swiper-fade)::after {
+//   content: "";
+//   position: absolute;
+//   inset: 0;
+//   z-index: 1;
+//   background: linear-gradient(
+//     to right,
+//     white 10%,
+//     transparent 40%,
+//     transparent 60%,
+//     white 90%
+//   );
+//   pointer-events: none;
+// }
+
+// .swiper-slide > * {
+//   flex-shrink: 0;
+// }
+
+// .swiper {
+//   margin-bottom: 5rem;
+
+//   @at-root .panelBackground & {
+//     margin-bottom: 0;
+//   }
+// }
+
+// .swiper-button-next,
+// .swiper-button-prev {
+//   color: rgb(var(--color-accent));
+// }
 
 section.columns {
   display: grid;
@@ -11,3 +220,4 @@ section.columns {
 }
 
 @import "editor.css";
+@import "/public/styles/fonts.css";
