Move font import to editor.css

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -1,3 +1,5 @@
+@import "/public/styles/fonts.css";
+
 .align-left { text-align: left; }
 .align-center { text-align: center; }
 .align-right { text-align: right; }
