--- a/styles/editor.css
+++ b/styles/editor.css
@@ -5,8 +5,106 @@
 .align-right { text-align: right; }
 .align-justify { text-align: justify; }
 
-a.button {
-  outline: 1px solid black;
-  border-radius: 0.25em;
-  padding: 0.25em;
+:root {
+  --indent: 8vw;
+  --text-gap: 2rem;
+  --text-gap-small: 1rem;
+  --column-gap: 4vw;
+  --text-size-huge: 46px;
+  --text-size-xxlarge: 30px;
+  --text-size-xlarge: 22px;
+  --text-size-large: 17px;
+  --text-size-medium: 15px;
+  --text-size-small: 14px;
+  --text-size-xsmall: 12px;
+  --text-size-xxsmall: 10px;
+
+  --feature-font-family: "Rosewood W05 Fill";
+  --default-font-family: "Ronnia W01 Light";
+  --bold-font-family: "Ronnia W01 Regular";
+
+  --color-primary: 24 58 78;
+  --color-accent: 120 45 49;
+  --text-color: var(--color-primary);
+  --heading-color: var(--color-primary);
+  --header-background-color: 0 0 0 / 0.6;
+  --header-color: 255 255 255;
+}
+
+p,
+li,
+input,
+button,
+textarea,
+label,
+select {
+  margin: 0;
+  line-height: 2;
+  font-family: var(--default-font-family);
+  font-size: var(--text-size-medium);
+  color: rgb(var(--text-color));
+}
+
+table {
+  line-height: 1.6;
+  font-family: var(--default-font-family);
+  font-size: var(--text-size-medium);
+  margin-bottom: 2em;
+
+  & th {
+    text-align: right;
+    padding-right: 0.5em;
+  }
+
+  & td {
+    text-align: left;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  line-height: 2;
+  font-family: var(--default-font-family);
+  color: rgb(var(--heading-color));
+}
+
+h1 {
+  font-size: var(--text-size-xxlarge);
+  font-family: var(--feature-font-family);
+}
+
+h2 {
+  font-size: var(--text-size-xlarge);
+  font-family: var(--feature-font-family);
+}
+
+h3 {
+  font-size: var(--text-size-large);
+  font-family: var(--feature-font-family);
+}
+
+h3.highlight-1 {
+  color: rgb(var(--color-accent) / 0.7);
+}
+
+h3.highlight-2 {
+  color: white;
+  background-color: rgb(var(--color-accent) / 0.9);
+  padding: 3px 10px;
+  margin: 0 0 5px 0;
+}
+
+hr {
+  height: 1px;
+  background-color: rgb(var(--color-primary) / 0.25);
+  border: none;
+}
+
+strong {
+  font-family: var(--bold-font-family);
 }
