--- a/styles/editor.css
+++ b/styles/editor.css
@@ -24,16 +24,17 @@ table {
   font-family: var(--default-font-family);
   font-size: var(--text-size-medium);
   margin-bottom: 2em;
+}
 
-  & th {
+table th {
     text-align: right;
     padding-right: 0.5em;
   }
 
-  & td {
+table td {
     text-align: left;
   }
-}
+
 
 h1,
 h2,
