--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -138,3 +138,70 @@ section.columns {
 }
 
 @import "editor";
+
+p,
+li,
+input,
+button,
+textarea,
+label,
+select {
+  margin: 0;
+  line-height: 2;
+  font-family: var(--default-font-family);
+  font-size: var(--text-size-medium);
+  color: rgb(var(--text-color));
+}
+
+table {
+  line-height: 1.6;
+  font-family: var(--default-font-family);
+  font-size: var(--text-size-medium);
+  margin-bottom: 2em;
+}
+
+table th {
+  text-align: right;
+  padding-right: 0.5em;
+}
+
+table td {
+  text-align: left;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  line-height: 2;
+  font-family: var(--default-font-family);
+  color: rgb(var(--heading-color));
+}
+
+h1 {
+  font-size: var(--text-size-xxlarge);
+  font-family: var(--feature-font-family);
+}
+
+h2 {
+  font-size: var(--text-size-xlarge);
+  font-family: var(--feature-font-family);
+}
+
+h3 {
+  font-size: var(--text-size-large);
+  font-family: var(--feature-font-family);
+}
+
+hr {
+  height: 1px;
+  background-color: rgb(var(--color-primary) / 0.25);
+  border: none;
+}
+
+strong {
+  font-family: var(--bold-font-family);
+}
