Configure astro elements for live editing

--- a/layouts/PageLayout.astro
+++ b/layouts/PageLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "@shared/page";
+import Page from "@shared/page.astro";
 import Layout from "./Layout.astro";
 
 type Props = {
