--- a/layouts/PageLayout.astro
+++ b/layouts/PageLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Page from "src/shared/astro/page.astro";
+import Page from "@shared/Page.astro";
 import Layout from "./Layout.astro";
 
 type Props = {
