Convert richtext element to astro, style updates

--- a/components/layout/columns/columns.astro
+++ b/components/layout/columns/columns.astro
@@ -1,6 +1,6 @@
 ---
 export interface Props {
-  contentBlocks: any[];
+  content_blocks: any[];
 }
 
 const contentBlocks = Astro.props.content_blocks;
@@ -13,19 +13,19 @@ const componentImports = import.meta.glob(
   }
 );
 
-Object.entries(componentImports).forEach(([path, obj]) => {
+Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
   const parts = path.replace("../../", "").split(".")[0].split("/");
   if (parts.length > 1 && parts[parts.length - 1] === parts[parts.length - 2]) {
     parts.pop();
   }
   const bookshopName = parts.join("/");
-  components[bookshopName] = <any>obj.default;
+  components[bookshopName] = obj.default;
 });
 ---
 
 <section class="columns" style={{ "--column-count": contentBlocks.length }}>
   {
-    contentBlocks.map((column, i) => {
+    contentBlocks.map((column: any, i: any) => {
       const Component = components[column._bookshop_name];
       return (
         <div class={`column${i}`}>
@@ -35,3 +35,9 @@ Object.entries(componentImports).forEach(([path, obj]) => {
     })
   }
 </section>
+
+<style lang="scss">
+  .columns {
+    column-gap: var(--column-gap);
+  }
+</style>
