--- a/components/gallery/gallery.astro
+++ b/components/gallery/gallery.astro
@@ -5,7 +5,6 @@ export interface Props {
 }
 
 const { images, height } = Astro.props;
-console.log(images);
 ---
 
 <section class="gallery">
@@ -30,8 +29,7 @@ console.log(images);
     grid-auto-flow: column;
     gap: var(--columnGap);
     padding: var(--columnGap);
-    width: 100%;
-    height: 100%;
+    // height: 100%;
   }
 
   .gallery-item {
