--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,6 +3,7 @@
   --text-gap: 2rem;
   --text-gap-small: 1rem;
   --column-gap: 4vw;
+  --section-margin: 4vw;
   --text-size-huge: 46px;
   --text-size-xxlarge: 30px;
   --text-size-xlarge: 22px;
@@ -41,6 +42,10 @@ section
   > :is(h1, h2, h3, h4, h5, h6, p, ul, form, address)
   + :is(h1, h2, h3, h4, h5, h6, p, ul, form, address) {
   margin-top: var(--text-gap);
+}
+
+main > section:not(.no-margin) {
+  margin: var(--section-margin);
 }
 
 // .panelBackground {
