--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,7 +3,6 @@
   --text-gap: 2rem;
   --text-gap-small: 1rem;
   --column-gap: 4vw;
-  --section-margin: 4vw;
   --text-size-huge: 46px;
   --text-size-xxlarge: 30px;
   --text-size-xlarge: 22px;
@@ -44,8 +43,8 @@ section
   margin-top: var(--text-gap);
 }
 
-main > section:not(.no-margin) {
-  margin: var(--section-margin);
+main > section:not(.no-indent) {
+  margin: var(--indent);
 }
 
 // .panelBackground {
