--- a/shared/astro/Page.astro
+++ b/shared/astro/Page.astro
@@ -7,27 +7,37 @@ const { contentBlocks } = Astro.props;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
-  ["../../components/**/*.jsx", "../../components/**/*.astro"],
+  ["/src/components/**/*.jsx", "/src/components/**/*.astro"],
   {
     eager: true,
   }
 );
 
-Object.entries(componentImports).forEach(([path, obj]) => {
-  const parts = path.replace("../../components/", "").split(".")[0].split("/");
+Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
+  const parts = path
+    .replace(/^.*components\//, "")
+    .split(".")[0]
+    .split("/");
   if (parts.length > 1 && parts[parts.length - 1] === parts[parts.length - 2]) {
     parts.pop();
   }
   const bookshopName = parts.join("/");
-  components[bookshopName] = <any>obj.default;
+  components[bookshopName] = obj.default;
 });
 ---
 
 <main>
   {
-    contentBlocks.map((block, i) => {
+    contentBlocks.map((block: any, i: number) => {
       const Component = components[block._bookshop_name];
-      return <Component {...block} key={i} />;
+      if (Component) {
+        return <Component {...block} />;
+      }
+      return (
+        <div class="missing-component">
+          {`Component ${block._bookshop_name} could not be found!`}
+        </div>
+      );
     })
   }
 </main>
