--- a/components/form/form.astro
+++ b/components/form/form.astro
@@ -52,3 +52,10 @@ console.log(components);
     <input type="submit" value="Submit" />
   </form>
 </section>
+
+<style lang="scss">
+  .form form {
+    display: flex;
+    flex-direction: column;
+  }
+</style>
