--- a/components/form/inputs/email/email.astro
+++ b/components/form/inputs/email/email.astro
@@ -4,22 +4,18 @@ export interface Props {
   label: string;
   placeholder: string;
   required: boolean;
-  minlength: number;
-  maxlength: number;
 }
 
-const { name, label, placeholder, required, minlength, maxlength } =
-  Astro.props;
+const { name, label, placeholder, required } = Astro.props;
 ---
 
 <label for={name}>{label}</label>
 <input
-  type="text"
+  type="email"
   name={name}
   {required}
   placeholder={placeholder}
-  minlength={minlength}
-  maxlength={maxlength}
+  maxlength="64"
 />
 
 <style lang="scss">
