--- a/components/form/inputs/text/text.astro
+++ b/components/form/inputs/text/text.astro
@@ -8,8 +8,9 @@ export interface Props {
   maxlength: number;
 }
 
-const { name, label, placeholder, required, minlength, maxlength } =
-  Astro.props;
+const { name, label, placeholder, required } = Astro.props;
+const minlength = Astro.props.minlength ? Astro.props.minlength : undefined;
+const maxlength = Astro.props.maxlength ? Astro.props.maxlength : undefined;
 ---
 
 <label for={name}>{label}</label>
@@ -21,9 +22,3 @@ const { name, label, placeholder, required, minlength, maxlength } =
   minlength={minlength}
   maxlength={maxlength}
 />
-
-<style lang="scss">
-  input {
-    margin-bottom: 1rem;
-  }
-</style>
