--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -210,11 +210,15 @@ strong {
   font-family: var(--bold-font-family);
 }
 
-.missing-component {
-  display: none;
-}
+// .missing-component {
+//   display: none;
+// }
 
 .cms-editor-active .missing-component {
+  display: block;
+}
+
+.missing-component {
   display: block;
   background-color: #faa;
   padding: 2rem;
