--- a/components/form/fieldset.astro
+++ b/components/form/fieldset.astro
@@ -2,9 +2,10 @@
 export interface Props {
   legend: string;
   form_blocks: any[];
+  key?: string;
 }
 
-const { legend, form_blocks } = Astro.props;
+const { legend, form_blocks, key } = Astro.props;
 
 const components: Record<string, any> = {};
 const componentImports = import.meta.glob(
@@ -22,7 +23,6 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
     .replace(/^.*components\//, "")
     .split(".")[0]
     .split("/");
-  console.log(path);
   if (parts.length > 1 && parts[parts.length - 1] === parts[parts.length - 2]) {
     parts.pop();
   }
@@ -37,7 +37,7 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
     form_blocks.map((block: any, i: any) => {
       const Component = components[block._bookshop_name];
       if (Component) {
-        return <Component {...block} />;
+        return <Component {...block} key={String(i) + (key || "")} />;
       }
       return (
         <div class="missing-component">
@@ -47,3 +47,16 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
     })
   }
 </fieldset>
+
+<style lang="scss">
+  fieldset {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+
+    legend {
+      font-size: larger;
+    }
+  }
+</style>
