--- a/components/form/inputs/email/email.astro
+++ b/components/form/inputs/email/email.astro
@@ -4,15 +4,18 @@ export interface Props {
   label: string;
   placeholder: string;
   required: boolean;
+  key?: string;
 }
 
-const { name, label, placeholder, required } = Astro.props;
+const { name, label, placeholder, required, key } = Astro.props;
+const id = (name || "") + "-" + (key || "");
 ---
 
-<label for={name}>{label}</label>
+<label for={id}>{label}</label>
 <input
   type="email"
   name={name}
+  {id}
   {required}
   placeholder={placeholder}
   maxlength="254"
