Update icon scss

--- a/components/form/info.astro
+++ b/components/form/info.astro
@@ -62,7 +62,7 @@ const icon = style
     padding-left: 1.5rem;
   }
 
-  *[astro-icon] {
+  svg[astro-icon] {
     position: absolute;
     width: 2.5rem;
     left: 1.2rem;
