--- a/components/form/info.astro
+++ b/components/form/info.astro
@@ -46,13 +46,13 @@ const icon = style
 
   .form-info-info {
     background-color: #daeaef;
-    *[astro-icon] {
+    svg[astro-icon] {
       color: #1c6077;
     }
   }
   .form-info-warning {
     background-color: #fafad2;
-    *[astro-icon] {
+    svg[astro-icon] {
       color: #d2a72c;
     }
   }
