Add unplugin icon types to env.d.ts

--- a/components/form/info.astro
+++ b/components/form/info.astro
@@ -47,16 +47,18 @@ const Icon = style
 
   .form-info-info {
     background-color: #daeaef;
-    svg.icon {
-      color: #1c6077;
-    }
   }
+  .form-info-info svg.icon {
+    color: #1c6077;
+  }
+
   .form-info-warning {
     background-color: #fafad2;
-    svg.icon {
-      color: #d2a72c;
-    }
   }
+  .form-info-warning svg.icon {
+    color: #d2a72c;
+  }
+
   .form-info-details {
     background-color: #efefef;
     font-style: italic;
