Unroll scss styles to css to fix bookshop errors

--- a/components/form/fieldset.astro
+++ b/components/form/fieldset.astro
@@ -52,15 +52,15 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
   }
 </fieldset>
 
-<style lang="scss">
+<style>
   fieldset {
     display: flex;
     flex-direction: column;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
+  }
 
-    legend {
-      font-size: larger;
-    }
+  legend {
+    font-size: larger;
   }
 </style>
