--- a/components/form/form.astro
+++ b/components/form/form.astro
@@ -49,7 +49,7 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
   </form>
 </section>
 
-<style lang="scss">
+<style>
   .form form {
     display: flex;
     flex-direction: column;
