--- a/components/form/info.astro
+++ b/components/form/info.astro
@@ -28,7 +28,7 @@ const Icon = style
   <Fragment set:html={htmlContent} />
 </section>
 
-<style lang="scss">
+<style>
   section {
     position: relative;
     margin-bottom: 2rem;
