--- a/components/form/inputs/checkbox/checkbox.astro
+++ b/components/form/inputs/checkbox/checkbox.astro
@@ -16,7 +16,7 @@ const id = (name || "") + "-" + (key || "");
   <input type="checkbox" {name} {id} {required} {checked} />
   <label for={id}>{label}</label>
 </div>
-<style lang="scss">
+<style>
   div {
     display: flex;
     gap: 1.5rem;
