--- a/components/form/info.astro
+++ b/components/form/info.astro
@@ -1,7 +1,8 @@
 ---
 import MarkdownIt from "markdown-it";
-import IconInformation from "virtual:icons/carbon/information-filled";
-import IconWarning from "virtual:icons/carbon/warning-square-filled";
+import IconInformation from "~icons/carbon/information-filled";
+import IconWarning from "~icons/carbon/warning-square-filled";
+
 const md = new MarkdownIt({ html: true });
 
 export interface Props {
