Add form honeypot field, wording changes

--- a/components/form/form.astro
+++ b/components/form/form.astro
@@ -45,6 +45,7 @@ Object.entries(componentImports).forEach(([path, obj]: [string, any]) => {
         );
       })
     }
+    <input type="hidden" name="_gotcha" />
     <input type="submit" value="Submit" />
   </form>
 </section>
