--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -9,6 +9,8 @@ export interface Props {
 
 import "../styles/styles.scss";
 // import "../styles/layouts.scss";
+import "node_modules/@glidejs/glide/dist/css/glide.core.min.css";
+// import "node_modules/@glidejs/glide/dist/css/glide.theme.min.css";
 
 const { title, content_blocks } = Astro.props;
 import preferences from "data/preferences.json";
