--- a/components/astrotest/astrotest.astro
+++ b/components/astrotest/astrotest.astro
@@ -3,14 +3,14 @@ export interface Props {
   text: string;
 }
 
-const liveEditor = import.meta.env.ENV_BOOKSHOP_LIVE ? true : false;
+// const liveEditor = import.meta.env.ENV_BOOKSHOP_LIVE ? true : false;
 ---
 
 <div style="padding: 2rem;">
   <p>Test string: <span style="font-weight: bold;">{Astro.props.text}</span></p>
   <p>
     Live editing status: <span style="font-weight: bold;">
-      {liveEditor ? "On" : "Off"}
+      {ENV_BOOKSHOP_LIVE ? "On" : "Off"}
     </span>
   </p>
 </div>
